030-software/fluxcd/apps/bubbles/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: bubbles
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: bubbles
