030-software/fluxcd/apps/bubbles/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bubbles
  annotations:
    dashboard.${domain}/name: bubbles
    dashboard.${domain}/url: https://bubbles.${domain}
    dashboard.${domain}/icon: chat
spec:
  hostnames:
  - bubbles.${domain}
  parentRefs:
  - name: cilium
    namespace: cilium
  rules:
  - backendRefs:
    - name: bubbles
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
